# crabbase

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  db-design.md  openapi.json
crabbase/: Cargo.toml
crabbase/src/: bootstrap.rs  cli.rs  errors.rs  main.rs  servers.rs
crates/admin/: Cargo.toml
crates/admin-ui/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
crates/admin-ui/src/: input.css  main.rs  routes.rs
crates/admin-ui/src/api/: client.rs
crates/admin-ui/src/components/: collection_list.rs  create_collection_drawer.rs  create_record_drawer.rs  data_page.rs  data_table.rs  edit_collection_drawer.rs  edit_record_drawer.rs  footer.rs  login.rs  main_page.rs  mod.rs  page_header.rs  sidebar.rs  titlebar.rs
crates/admin-ui/src/components/data_table/: cell_value.rs  column.rs  data_table.rs  mod.rs  row.rs  schema.rs
crates/admin-ui/src/models/: collection.rs  mod.rs  record.rs  user.rs
crates/admin/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  state.rs
crates/api/src/middleware/: auth.rs  mod.rs
crates/api/src/routes/: auth.rs  collections.rs  mod.rs  records.rs  swagger.html
crates/auth/: Cargo.toml
crates/auth/src/: auth.rs  service.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  errors.rs  lib.rs  models.rs
crates/core/src/rules/: compiler.rs  parser.rs
crates/core/src/utils/: string_utils.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs
crates/db/src/repositories/: auth.rs  collections.rs  mod.rs  records.rs
crates/files/: Cargo.toml
crates/files/src/: lib.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: lib.rs
crates/realtime/: Cargo.toml
crates/realtime/src/: lib.rs
migrations/: 00001_init.down.sql  00001_init.up.sql
scripts/: create_test_collections.sh  pg_seed.sh  sqlite_seed.sh
src/: main.rs
src/api/: mod.rs  models.rs  state.rs  store.rs
src/api/routes/: collections.rs  mod.rs  records.rs
src/core/: errors.rs  logging.rs  mod.rs
src/core/db/: connection.rs  db.rs
src/core/db/sql/: create_collection.sql
src/core/repositories/: collections.rs  records.rs
src/db/: mod.rs  pool.rs
src/realtime/: mod.rs
