[package]
name = "crabbase"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.51.1", features = ["full"] }
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
