[workspace]
members = ["crabbase", "crates/*"]
default-members = ["crabbase"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.51.1", features = ["full"] }
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.6.1", features = ["derive"] }
axum_jwt_auth = { version = "0.7.0" }
jsonwebtoken = { version = "9" }
bcrypt = "0.15.1"


# Workspace local members
crabbase_core = { path = "crates/core" }
crabbase_db = { path = "crates/db" }
crabbase_api = { path = "crates/api" }
crabbase_auth = { path = "crates/auth" }
crabbase_files = { path = "crates/files" }
crabbase_realtime = { path = "crates/realtime" }
crabbase_hooks = { path = "crates/hooks" }
crabbase_admin = { path = "crates/admin" }

[workspace.lints.rust]
dead_code = "allow"
