[workspace]
members = ["crabbase", "crates/*"]
default-members = ["crabbase"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.51.1", features = ["full"] }
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "migrate", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.6.1", features = ["derive"] }
axum_jwt_auth = { version = "0.7.0" }
jsonwebtoken = { version = "9" }
bcrypt = "0.15.1"
rand = "0.8"
serde_urlencoded = "0.7.1"


# Workspace local members
crabbase_core = { path = "crates/core" }
crabbase_db = { path = "crates/db" }
crabbase_api = { path = "crates/api" }
crabbase_auth = { path = "crates/auth" }
crabbase_files = { path = "crates/files" }
crabbase_realtime = { path = "crates/realtime" }
crabbase_hooks = { path = "crates/hooks" }
crabbase_admin = { path = "crates/admin" }

[workspace.lints.rust]
dead_code = "allow"

[profile.release]
opt-level = 3        # Maximum optimization
lto = "fat"          # Link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
panic = "abort"      # Remove panic unwinding code
strip = true         # Strip symbols
debug = false        # No debug info

# For benchmarking (need some debug info for profiling)
[profile.bench]
inherits = "release"
debug = true
strip = false

# Fast dev builds with optimized dependencies
[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3        # Optimize dependencies even in dev
