[package]
name = "crabbase"
version = "0.1.0"
edition = "2024"

[dependencies]
crabbase_core = { workspace = true }
crabbase_db = { workspace = true }
crabbase_api = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
