[package]
name = "crabbase_api"
version = "0.1.0"
edition = "2024"

[dependencies]
crabbase_core = { workspace = true }
crabbase_db = { workspace = true }
crabbase_auth = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
