[package]
name = "crabbase_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
crabbase_core = { workspace = true }
crabbase_db = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
bcrypt = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
