[package]
name = "crabbase_db"
version = "0.1.0"
edition = "2024"

[dependencies]
crabbase_core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
bcrypt = { workspace = true }
